--- a/web data viz/public/painel_mocado.html
+++ b/web data viz/public/painel_mocado.html
@@ -135,7 +135,7 @@
     b_usuario.innerHTML = sessionStorage.NOME_USUARIO;
     var menu = false;
 
-    const ctx = document.getElementById('bar');
+    var ctx = document.getElementById('bar');
 
     new Chart(ctx, {
     type: 'bar',
